# apprise-api-headless

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish.yml
apprise_api_headless/: alertmanager.py  apprise.py  config.py  logging.py  main.py  metrics.py  models.py  routes.py  utils.py
config/: log_config.yaml
tests/: conftest.py  payloads.py  test_alertmanager.py  test_metrics.py  test_notify.py  test_status.py  test_utils.py
