[project]
name = "apprise-api-headless"
description = "Minimalistic version of Apprise API"
readme = "README.md"
license-files = ["LICENSE.md"]
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "apprise==1.9.7",
    "fastapi[standard]==0.128.6",
    "prometheus-fastapi-instrumentator==7.1.0",
    "pydantic-settings==2.12.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-httpserver==1.1.4",
    "ruff==0.15.2",
]

[tool.setuptools]
packages = ["apprise_api_headless"]

[tool.ruff.lint]
extend-select = ["E", "W", "I", "B", "Q"]

[tool.pytest.ini_options]
pythonpath = ["."]
log_cli = true
log_cli_level = "DEBUG"
